Range::setEnd(const Position&, ExceptionCode) calls setStart() instead of setEnd() https://bugs.webkit.org/show_bug.cgi?id=66638

Patch by Alice Boxhall <aboxhall@chromium.org> on 2011-08-22
Reviewed by Ryosuke Niwa.

Relevant layout test coming in a future patch (see https://bugs.webkit.org/show_bug.cgi?id=65900)

* dom/Range.cpp:
(WebCore::Range::setEnd):

Canonical link: https://commits.webkit.org/82552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93574 268f45cc-cd09-0410-ab3c-d52691b4dbfc